# BFCL_server

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/bfcl/: main.py  prompt_set.py  runners.py
src/bfcl/constants/: category_mappings.py  config.py  id_mapper.py  type_mappings.py
src/bfcl/data/possible_answer/: rest_eval_response.jsonl
src/bfcl/eval/ast/: checker.py  checkers.py  utils.py
src/bfcl/eval/exec/: checkers.py  executable_python_functions.py  utils.py
src/bfcl/eval/multi_turn/: __init__.py
src/bfcl/schemas/: responses.py  tool_calls.py
src/bfcl/utils/: _apply_function_credential_config.py  exceptions.py  ops.py  responses.py
src/tests/: __init__.py  test_plain_json_runner.py
