[project]
name = "bfcl_server"
version = "0.1.0"
description = "BFCL Server"
readme = "README.md"
authors = [
    { name = "Shangmin Guo", email = "shawnguo.cn@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "tree_sitter==0.21.3",
    "tree-sitter-java==0.21.0",
    "tree-sitter-javascript==0.21.4",
    "tqdm==4.67.1",
    "flask==3.1.0",
    "uvicorn==0.34.0",
    "asgiref==3.8.1",
    "pydantic==2.10.4",
    "requests==2.32.3",
]

[project.scripts]
bfcl = "bfcl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bfcl"]

[project.optional-dependencies]
dev = [
    "autoflake>=2.1.1",
    "black>=22.10.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "pook>=1.4.3",
    "pre-commit>=4.2.0",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
in-place = true
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]
per-file-ignores = [
    "__init__.py: F401"
]
